feat: add task duplicate, task templates, and create-from-template - Task duplicate: duplicate any task to any project with full metadata - Task templates: save tasks as reusable templates, create from templates - Template management page at /templates with rich text editor - From Template button on List, Table, and Kanban views - Save as Template on kanban card menu and task detail sidebar - Auto-selects current project as destination - API: PUT/GET/POST/DELETE /tasktemplates, PUT /tasktemplates/:id/tasks - Database migration for task_templates table

--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -811,6 +811,37 @@
       "success": "The task was successfully duplicated.",
       "error": "An error occurred while duplicating the task."
     },
+    "template": {
+      "createFromTemplate": "Create from Template",
+      "fromTemplate": "From Template",
+      "saveAsTemplate": "Save as Template",
+      "saveAsTemplateHint": "Save this task's properties as a reusable template. You can then create new tasks from it in any project.",
+      "templateName": "Template name",
+      "titleRequired": "A template name is required.",
+      "save": "Save Template",
+      "saveSuccess": "The task was saved as a template.",
+      "saveError": "An error occurred while saving the template.",
+      "searchPlaceholder": "Search templates…",
+      "noResults": "No templates match your search.",
+      "noTemplates": "You haven't created any templates yet. Save a task as a template to get started.",
+      "backToList": "Back to templates",
+      "taskTitle": "Task title",
+      "titleHint": "Leave blank to use the template's title.",
+      "targetProject": "Destination project",
+      "selectProjectRequired": "Please select a destination project.",
+      "create": "Create Task",
+      "createSuccess": "The task was successfully created from the template.",
+      "createError": "An error occurred while creating the task.",
+      "navTitle": "Templates",
+      "manageTitle": "Task Templates",
+      "manageDescription": "Manage your saved task templates. Use them to quickly create tasks with predefined properties.",
+      "edit": "Edit Template",
+      "createNew": "New Template",
+      "updateSuccess": "The template was updated.",
+      "deleteConfirmTitle": "Delete Template",
+      "deleteConfirmText": "Are you sure you want to delete the template \"{title}\"? This cannot be undone.",
+      "deleteSuccess": "The template was deleted."
+    },
     "createSuccess": "The task was successfully created.",
     "addReminder": "Add a reminder…",
     "doneSuccess": "The task was successfully marked as done.",
@@ -870,6 +901,7 @@
         "relatedTasks": "Add Relation",
         "moveProject": "Move",
         "duplicate": "Duplicate",
+        "saveAsTemplate": "Save as Template",
         "color": "Set Color",
         "delete": "Delete",
         "favorite": "Add to Favorites",
