feat: Task Chain Workflows - sequential task generation with relative timing Introduces a new 'Chain' system that lets users define reusable multi-step task workflows with relative timing offsets. When instantiated, all tasks in the chain are auto-created with calculated dates and linked via precedes/follows relations. Backend: - New models: TaskChain, TaskChainStep (pkg/models/task_chain.go) - Chain instantiation engine (pkg/models/task_from_chain.go) - Cumulative offset calculation: each step's offset_days is relative to the previous step, not the anchor date - Auto-creates precedes/follows relations between consecutive tasks - Supports optional title prefix for batch identification - Migration 20260224040000: task_chains + task_chain_steps tables - Full CRUD API: /taskchains endpoints + /taskchains/:chain/tasks Frontend: - taskChainApi.ts: HTTP client for chain CRUD + instantiation - ChainEditor.vue: Full chain management UI - Step editor with title, days-after-previous, duration - Live 'Day X' cumulative indicator per step - Timeline preview on chain cards - Total timespan display (e.g. '3w 2d (23 days)') - CreateFromChainModal.vue: Instantiation modal - Chain selection, anchor date picker, optional title prefix - Live date preview showing calculated dates per step - ListTemplates.vue: Added 'Templates | Chains' tab navigation - ProjectList.vue + ProjectTable.vue: 'From Chain' button in headers - 30 new i18n keys for chain UI Example workflow: Chain 'Clone Cutting' with steps: 1. Cut Clone (Day 0) 2. First Watering (+7 days = Day 7) 3. Lift Domes (+2 days = Day 9) 4. Transplant (+14 days = Day 23) Anchor to Feb 23 -> tasks created at Feb 23, Mar 2, Mar 4, Mar 18 All linked with precedes/follows relations for dependency tracking.

--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -111,9 +111,9 @@
           "mm-dd-yyyy": "MM-DD-YYYY",
           "dd-mm-yyyy": "DD-MM-YYYY",
           "yyyy-mm-dd": "YYYY-MM-DD",
-          "mm\/dd\/yyyy": "MM\/DD\/YYYY",
-          "dd\/mm\/yyyy": "DD\/MM\/YYYY",
-          "yyyy\/mm\/dd": "YYYY\/MM\/DD"
+          "mm/dd/yyyy": "MM/DD/YYYY",
+          "dd/mm/yyyy": "DD/MM/YYYY",
+          "yyyy/mm/dd": "YYYY/MM/DD"
         },
         "timeFormat": "Time format",
         "timeFormatOptions": {
@@ -1380,5 +1380,35 @@
       "months": "month|months",
       "years": "year|years"
     }
-  }
+  },
+  "task.chain.createNew": "New Chain",
+  "task.chain.edit": "Edit Chain",
+  "task.chain.noChains": "No chain workflows yet. Create one to define a sequence of tasks with relative timing.",
+  "task.chain.chainName": "Chain Name",
+  "task.chain.chainNamePlaceholder": "e.g. Clone Cutting Workflow",
+  "task.chain.descriptionPlaceholder": "Describe what this workflow does…",
+  "task.chain.steps": "Steps",
+  "task.chain.stepTitle": "Step title…",
+  "task.chain.offsetDays": "Offset (days)",
+  "task.chain.durationDays": "Duration (days)",
+  "task.chain.addStep": "Add Step",
+  "task.chain.deleteConfirmTitle": "Delete Chain",
+  "task.chain.deleteConfirmText": "Are you sure you want to delete the chain \"{title}\"? This cannot be undone.",
+  "task.chain.updateSuccess": "Chain updated successfully.",
+  "task.chain.createSuccess": "Chain created successfully.",
+  "task.chain.deleteSuccess": "Chain deleted successfully.",
+  "task.chain.createFromChain": "Create from Chain",
+  "task.chain.noChainsAvailable": "No chain workflows available. Create one in Templates → Chains.",
+  "task.chain.selectChain": "Select Chain",
+  "task.chain.anchorDate": "Start Date (Anchor)",
+  "task.chain.anchorDateHelp": "All task dates are calculated relative to this date.",
+  "task.chain.titlePrefix": "Title Prefix (optional)",
+  "task.chain.titlePrefixPlaceholder": "e.g. Batch #42 - ",
+  "task.chain.preview": "Preview",
+  "task.chain.createTasks": "Create All Tasks",
+  "task.chain.createTasksSuccess": "All chain tasks created successfully!",
+  "task.chain.tab": "Chains",
+  "task.template.tabTemplates": "Templates",
+  "task.template.tabChains": "Chains",
+  "task.chain.daysAfterPrev": "Days after prev"
 }
