Phase 2b: chain steps, attachments, gantt arrows, cascade editor (Echo v5 fix)

--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -1410,5 +1410,12 @@
   "task.chain.tab": "Chains",
   "task.template.tabTemplates": "Templates",
   "task.template.tabChains": "Chains",
-  "task.chain.daysAfterPrev": "Days after prev"
+  "task.chain.daysAfterPrev": "Days after prev",
+  "task.chain.stepDescription": "Step Description",
+  "task.chain.stepDescriptionPlaceholder": "Add instructions, notes, or checklists for this step…",
+  "task.chain.stepAttachments": "Attachments",
+  "task.chain.addAttachment": "Add file",
+  "task.chain.showDetails": "Details",
+  "task.chain.hideDetails": "Hide details",
+  "task.chain.hasDescription": "Has description"
 }
