feat: phase 2c - template tabs, new template button, chain description overrides - ListTemplates: Templates/Chains tabs with + NEW TEMPLATE button - CreateFromChainModal: smart separator preview, editable step descriptions - Backend: step_description_overrides in TaskFromChain - i18n: chainsTab, editDescription, addDescription, hideDescription

--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -1417,5 +1417,9 @@
   "task.chain.addAttachment": "Add file",
   "task.chain.showDetails": "Details",
   "task.chain.hideDetails": "Hide details",
-  "task.chain.hasDescription": "Has description"
+  "task.chain.hasDescription": "Has description",
+  "task.chain.chainsTab": "Chains",
+  "task.chain.editDescription": "Edit description",
+  "task.chain.addDescription": "Add description",
+  "task.chain.hideDescription": "Hide description"
 }
