feat: phase 2c - template tabs, new template, editable chain preview - ListTemplates: Templates/Chains tabs with + NEW TEMPLATE button - CreateFromChainModal: add/remove steps, editable titles + rich text descriptions - Smart separator preview matching backend logic - Backend: custom_steps field replaces step_description_overrides - i18n updates

--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -1421,5 +1421,6 @@
   "task.chain.chainsTab": "Chains",
   "task.chain.editDescription": "Edit description",
   "task.chain.addDescription": "Add description",
-  "task.chain.hideDescription": "Hide description"
+  "task.chain.hideDescription": "Hide description",
+  "task.chain.addStepToPreview": "Add step"
 }
