style: modernize Upcoming page layout to match other pages - content-widescreen wrapper, h2 + description, horizontal options bar - page-separator line, consistent loading/empty states - New i18n: task.show.pageDescription

--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -863,7 +863,8 @@
 			"select": "Select a date range",
 			"noTasks": "Nothing to do — Have a nice day!",
 			"filterByLabel": "Filtering by label {label}",
-			"clearLabelFilter": "Clear label filter"
+			"clearLabelFilter": "Clear label filter",
+			"pageDescription": "View your upcoming tasks across all projects. Filter by date range, overdue status, or tasks without dates."
 		},
 		"detail": {
 			"chooseDueDate": "Click here to set a due date",
