--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -4,7 +4,7 @@
 		"welcomeMorning": "Good Morning {username}!",
 		"welcomeDay": "Hi {username}!",
 		"welcomeEvening": "Good Evening {username}!",
-		"lastViewed": "Last viewed",
+		"lastViewed": "Last Viewed",
 		"addToHomeScreen": "Add this app to your home screen for faster access and improved experience.",
 		"goToOverview": "Go to overview",
 		"project": {
