feat: auto-generated recurring task templates Auto-task templates that materialize task instances when due. Only one open instance per template — uncompleted tasks go overdue. Next due recalculates from completion time, not creation. Pause/resume per template, manual 'Send Now' trigger. Generation log tracks system vs manual creation. Backend: - auto_task_template.go: model, CRUD, permissions (owner-only) - auto_task_create.go: check/create logic, trigger, completion handler - auto_task_handler.go: echo v5 HTTP handlers (trigger + check) - Migration 20260224070000: 3 new tables, tasks.auto_template_id - Routes: 7 new endpoints under /api/v1/autotasks Frontend: - AutoTaskEditor.vue: card list with pause/resume, send now, gen log - autoTaskApi.ts: HTTP client - ListTemplates.vue: third 'Auto-Generated' tab - Home.vue: auto-check on mount - ChainEditor.vue: default duration unit from localStorage - 41 new i18n keys Build fixes: - All handlers use echo v5 (not v4), pointer receiver - NewHTTPError always 2 args, auth via pkg/modules/auth - ReadAll returns int64, createTask 5-arg signature - auto_template_id set via raw SQL (not on Task struct) - TaskAssginee matches upstream typo, PermissionAdmin from models docs: CHANGELOG.md, docs/AUTO_TASKS.md, docs/PATCH_MANIFEST.md

--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -1433,5 +1433,46 @@
 	"task.chain.units.hours": "hours",
 	"task.chain.units.days": "days",
 	"task.chain.units.weeks": "weeks",
-	"task.chain.units.months": "months"
+	"task.chain.units.months": "months",
+	"task.autoTask.tab": "Auto-Generated",
+	"task.autoTask.noTemplates": "No auto-generated task templates yet. Create one to automatically generate recurring tasks when they're due.",
+	"task.autoTask.createNew": "New Auto-Task",
+	"task.autoTask.editTemplate": "Edit Auto-Task Template",
+	"task.autoTask.edit": "Edit",
+	"task.autoTask.delete": "Delete",
+	"task.autoTask.deleteConfirmTitle": "Delete Auto-Task Template",
+	"task.autoTask.deleteConfirmText": "Are you sure you want to delete \"{title}\"? Future tasks will no longer be generated. Existing tasks are not affected.",
+	"task.autoTask.deleteSuccess": "Auto-task template deleted.",
+	"task.autoTask.createSuccess": "Auto-task template created.",
+	"task.autoTask.updateSuccess": "Auto-task template updated.",
+	"task.autoTask.taskTitle": "Task Title",
+	"task.autoTask.taskTitlePlaceholder": "e.g. Water the plants",
+	"task.autoTask.description": "Description",
+	"task.autoTask.descriptionPlaceholder": "Optional instructions or notes for each generated task…",
+	"task.autoTask.interval": "Repeat Interval",
+	"task.autoTask.every": "Every",
+	"task.autoTask.units.hours": "hours",
+	"task.autoTask.units.days": "days",
+	"task.autoTask.units.weeks": "weeks",
+	"task.autoTask.units.months": "months",
+	"task.autoTask.targetProject": "Target Project",
+	"task.autoTask.targetProjectHelp": "Leave empty to use your default project.",
+	"task.autoTask.startDate": "Start Date",
+	"task.autoTask.endDate": "End Date (optional)",
+	"task.autoTask.endDateHelp": "Stop generating tasks after this date. Leave empty for no end date.",
+	"task.autoTask.activeLabel": "Active — automatically generate tasks when due",
+	"task.autoTask.active": "Active",
+	"task.autoTask.paused": "Paused",
+	"task.autoTask.pause": "Pause generation",
+	"task.autoTask.resume": "Resume generation",
+	"task.autoTask.pausedSuccess": "Auto-task paused. No new tasks will be generated until resumed.",
+	"task.autoTask.resumed": "Auto-task resumed. Tasks will be generated on schedule.",
+	"task.autoTask.sendNow": "Send to project now",
+	"task.autoTask.triggeredSuccess": "Task created and sent to project.",
+	"task.autoTask.defaultProject": "Default project",
+	"task.autoTask.nextDue": "Next",
+	"task.autoTask.generationLog": "Generation log",
+	"task.autoTask.logManual": "Manually triggered",
+	"task.autoTask.logSystem": "Auto-generated",
+	"task.autoTask.create": "Create Template"
 }
