feat: enriched generation log with completion tracking - Log 'completed' events when self-heal detects task completion - Enrich log entries server-side: task title, done status, done_at, updated timestamp, comment count (batch query) - Three log entry types with distinct colored icons - Show task title, completion time, open status, edit/comment counts - 6 new i18n keys

--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -1474,5 +1474,17 @@
 	"task.autoTask.generationLog": "Generation log",
 	"task.autoTask.logManual": "Manually triggered",
 	"task.autoTask.logSystem": "Auto-generated",
-	"task.autoTask.create": "Create Template"
+	"task.autoTask.create": "Create Template",
+	"task.autoTask.viewLog": "View generation log",
+	"task.autoTask.generationsRecorded": "generations recorded",
+	"task.autoTask.lastGenerated": "Last generated",
+	"task.autoTask.lastCompleted": "Last completed",
+	"task.autoTask.status": "Status",
+	"task.autoTask.noLogEntries": "No generation events recorded yet.",
+	"task.autoTask.completedAt": "Completed",
+	"task.autoTask.stillOpen": "Still open",
+	"task.autoTask.lastUpdated": "Updated",
+	"task.autoTask.comment": "comment",
+	"task.autoTask.comments": "comments",
+	"task.autoTask.logCompleted": "Completed"
 }
