feat: Gantt today - matching header color + visible color picker - Header 'today' badge reads ganttTodayHex from localStorage - Matches column highlight color (default gold #d4af37) - Auto text contrast based on luminance - Color picker button moved to bottom of column (was clipped) - 50% opacity, brightens on hover, popover opens upward - New patch file: GanttTimelineHeader.vue (35 total)

--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -1486,5 +1486,8 @@
 	"task.autoTask.lastUpdated": "Updated",
 	"task.autoTask.comment": "comment",
 	"task.autoTask.comments": "comments",
-	"task.autoTask.logCompleted": "Completed"
+	"task.autoTask.logCompleted": "Completed",
+	"task.autoTask.generateAt": "Generate at",
+	"task.autoTask.generateAtHelp": "Time of day to generate new tasks. Default: 2:00 AM.",
+	"task.autoTask.at": "at"
 }
