fix: restore arrow configurator, add done-by tracking, log truncation, gantt header fix Arrow configurator: - Restore GanttArrowSettings.vue (was never committed to git) - Restore useGanttArrowConfig.ts composable (localStorage persistence) - Restore GanttDependencyArrows.vue (config-aware version) - Restore ProjectGantt.vue with arrow settings, template/chain bottom bar Done-by tracking: - Migration 20260224080000: add done_by_id column to tasks - Migration 20260224090000: backfill from assignees/creator - tasks.go: set DoneByID on task completion - auto_task_template.go: enrich logs with done_by_name - AutoTaskEditor.vue: display completed by username Log truncation: - POST /autotasks/:id/log/truncate?keep=N endpoint - Keep last 5/10 buttons + Clear all with confirmation Gantt header fix: - GanttTimelineHeader.vue: use monthGroup.width not dayWidthPixels Patch script: - SSH key auth for deploy - Added arrow settings files to copy list

--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -858,6 +858,7 @@
 			"titleCurrent": "Current Tasks",
 			"titleDates": "Tasks from {from} until {to}",
 			"noDates": "Show tasks without date",
+			"completed": "Show completed tasks",
 			"overdue": "Show overdue tasks",
 			"fromuntil": "Tasks from {from} until {until}",
 			"select": "Select a date range",
@@ -1489,5 +1490,14 @@
 	"task.autoTask.logCompleted": "Completed",
 	"task.autoTask.generateAt": "Generate at",
 	"task.autoTask.generateAtHelp": "Time of day to generate new tasks. Default: 2:00 AM.",
-	"task.autoTask.at": "at"
+	"task.autoTask.at": "at",
+	"task.autoTask.manageLog": "Manage log",
+	"task.autoTask.keepRecent": "Keep last {count}",
+	"task.autoTask.clearAllLog": "Clear all",
+	"task.autoTask.clearLogConfirm": "Are you sure? This cannot be undone.",
+	"task.autoTask.clearLogYes": "Yes, clear all",
+	"task.autoTask.clearLogCancel": "Cancel",
+	"task.autoTask.logTruncated": "Log entries removed successfully.",
+	"task.autoTask.logTruncateError": "Failed to truncate log entries.",
+	"task.autoTask.completedBy": "by"
 }
