feat: add frontend session management with refresh tokens
- Session model, type interface, and API service
- Sessions settings page showing active sessions with device info,
  IP address, last active time, and current session indicator
- Auth store updated to use cookie-based refresh tokens for user
  sessions and JWT-based renewal for link shares
- refreshToken() uses Web Locks API to coordinate across browser
  tabs — only one tab performs the refresh, others adopt the result
- 401 response interceptor with automatic retry: detects expired JWT
  (error code 11), refreshes the token, and replays the request
- Interceptor gated to user JWTs only (link shares skip refresh)
- checkAuth() attempts cookie refresh when JWT is expired, allowing
  seamless session resumption after short TTL expiry
- Proactive token refresh on page focus/visibility via composable
- renewToken() tolerates refresh failures when JWT is still valid

--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -212,6 +212,20 @@
           "expiresAt": "Expires at",
           "permissions": "Permissions"
         }
+      },
+      "sessions": {
+        "title": "Sessions",
+        "description": "These are all the devices currently logged into your account. You can revoke any session to log that device out. It may take up to 10 minutes for the revocation to take full effect.",
+        "deviceInfo": "Device",
+        "ipAddress": "IP Address",
+        "lastActive": "Last Active",
+        "current": "Current session",
+        "delete": {
+          "header": "Revoke session",
+          "text": "Are you sure you want to revoke this session? The device will be logged out. It may take up to 10 minutes for the session to fully expire."
+        },
+        "deleteSuccess": "Session revoked successfully. It may take up to 10 minutes for the session to fully expire.",
+        "noOtherSessions": "No other active sessions."
       }
     },
     "deletion": {
